--- a/CVL_Database_Preprocessing.ipynb
+++ b/CVL_Database_Preprocessing.ipynb
@@ -102,250 +102,14 @@
       "metadata": {
         "id": "MZGK3H-6rpD2",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 3842
-        },
-        "outputId": "80278ff5-9ddb-437c-c5fc-6eb2b05001c9"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "!ls cvl-database-1-1/trainset/words/0001  # example of one writer"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            " 0001-1-0-0-Imagine.tif\t\t\t        0001-4-2-0-cultivated.tif\n",
-            " 0001-1-0-1-a.tif\t\t\t        0001-4-2-1-plants.tif\n",
-            " 0001-1-0-2-vast.tif\t\t\t        0001-4-2-2-and.tif\n",
-            " 0001-1-0-3-sheet.tif\t\t\t        0001-4-2-3-animals.tif\n",
-            " 0001-1-0-4-of.tif\t\t\t        0001-4-2-4-one.tif\n",
-            " 0001-1-0-5-paper.tif\t\t\t        0001-4-2-5-of.tif\n",
-            " 0001-1-0-6-on.tif\t\t\t        0001-4-2-6-the.tif\n",
-            " 0001-1-0-7-which.tif\t\t\t        0001-4-3-0-first.tif\n",
-            " 0001-1-0-8-straight.tif\t\t        0001-4-3-1-points.tif\n",
-            " 0001-1-10-0-opened.tif\t\t\t        0001-4-3-2-which.tif\n",
-            " 0001-1-10-1-to.tif\t\t\t        0001-4-3-3-strikes.tif\n",
-            " 0001-1-10-2-higher.tif\t\t\t        0001-4-3-4-us.tif\n",
-            " 0001-1-10-3-views.tif\t\t\t        0001-4-3-5-is.tif\n",
-            " 0001-1-10-4-of.tif\t\t\t        0001-4-3-6-that.tif\n",
-            " 0001-1-10-5-things.tif\t\t\t        0001-4-3-7-they.tif\n",
-            " 0001-1-1-0-Lines.tif\t\t\t        0001-4-4-0-generally.tif\n",
-            " 0001-1-1-1-Triangles.tif\t\t        0001-4-4-1-differ.tif\n",
-            " 0001-1-1-3-Squares.tif\t\t\t        0001-4-4-2-much.tif\n",
-            " 0001-1-1-4-Pentagons.tif\t\t        0001-4-4-3-more.tif\n",
-            " 0001-1-1-6-Hexagons.tif\t\t        0001-4-4-4-from.tif\n",
-            " 0001-1-1-7-and.tif\t\t\t        0001-4-4-5-each.tif\n",
-            " 0001-1-1-8-other.tif\t\t\t        0001-4-4-6-other.tif\n",
-            " 0001-1-2-0-figures.tif\t\t\t        0001-4-5-0-than.tif\n",
-            " 0001-1-2-2-instead.tif\t\t\t        0001-4-5-1-do.tif\n",
-            " 0001-1-2-3-of.tif\t\t\t        0001-4-5-2-the.tif\n",
-            " 0001-1-2-4-remaining.tif\t\t        0001-4-5-3-individuals.tif\n",
-            " 0001-1-2-5-fixed.tif\t\t\t        0001-4-5-4-of.tif\n",
-            " 0001-1-2-6-in.tif\t\t\t        0001-4-5-5-any.tif\n",
-            " 0001-1-2-7-their.tif\t\t\t        0001-4-5-6-one.tif\n",
-            " 0001-1-2-8-places.tif\t\t\t        0001-4-5-7-species.tif\n",
-            " 0001-1-3-0-move.tif\t\t\t        0001-4-6-0-or.tif\n",
-            " 0001-1-3-1-freely.tif\t\t\t        0001-4-6-1-variety.tif\n",
-            " 0001-1-3-2-about.tif\t\t\t        0001-4-6-2-in.tif\n",
-            " 0001-1-3-3-on.tif\t\t\t        0001-4-6-3-a.tif\n",
-            " 0001-1-3-4-or.tif\t\t\t        0001-4-6-4-state.tif\n",
-            " 0001-1-3-5-in.tif\t\t\t        0001-4-6-5-of.tif\n",
-            " 0001-1-3-6-the.tif\t\t\t        0001-4-6-6-nature.tif\n",
-            " 0001-1-3-7-surface.tif\t\t\t        0001-6-0-0-Werd.tif\n",
-            " 0001-1-3-8-but.tif\t\t\t        0001-6-0-1-ich.tif\n",
-            " 0001-1-3-9-without.tif\t\t\t        0001-6-0-2-zum.tif\n",
-            " 0001-1-4-0-the.tif\t\t\t        0001-6-0-3-Augenblicke.tif\n",
-            " 0001-1-4-1-power.tif\t\t\t        0001-6-0-4-sagen.tif\n",
-            " 0001-1-4-2-of.tif\t\t\t        0001-6-1-0-Verweile.tif\n",
-            " 0001-1-4-4-rising.tif\t\t\t        0001-6-1-1-doch.tif\n",
-            " 0001-1-4-5-above.tif\t\t\t        0001-6-1-2-du.tif\n",
-            " 0001-1-4-6-or.tif\t\t\t        0001-6-1-3-bist.tif\n",
-            " 0001-1-4-7-sinking.tif\t\t\t        0001-6-1-4-so.tif\n",
-            " 0001-1-4-8-below.tif\t\t\t        0001-6-1-5-schön.tif\n",
-            " 0001-1-4-9-it.tif\t\t\t        0001-6-2-0-Dann.tif\n",
-            " 0001-1-5-0-very.tif\t\t\t        0001-6-2-1-magst.tif\n",
-            " 0001-1-5-1-much.tif\t\t\t        0001-6-2-2-du.tif\n",
-            " 0001-1-5-2-like.tif\t\t\t        0001-6-2-3-mich.tif\n",
-            " 0001-1-5-3-shadows.tif\t\t\t        0001-6-2-4-in.tif\n",
-            " 0001-1-5-5-only.tif\t\t\t        0001-6-2-5-Fesseln.tif\n",
-            " 0001-1-5-6-hard.tif\t\t\t        0001-6-2-6-schlagen.tif\n",
-            " 0001-1-5-7-and.tif\t\t\t        0001-6-3-0-Dann.tif\n",
-            " 0001-1-5-8-with.tif\t\t\t        0001-6-3-1-will.tif\n",
-            " 0001-1-6-0-luminous.tif\t\t        0001-6-3-2-ich.tif\n",
-            " 0001-1-6-1-edges.tif\t\t\t        0001-6-3-3-gern.tif\n",
-            " 0001-1-6-2-and.tif\t\t\t        0001-6-3-4-zu.tif\n",
-            " 0001-1-6-3-you.tif\t\t\t        0001-6-3-6-Grunde.tif\n",
-            " 0001-1-6-4-will.tif\t\t\t        0001-6-3-7-gehn.tif\n",
-            " 0001-1-6-5-then.tif\t\t\t        0001-6-4-0-Dann.tif\n",
-            " 0001-1-6-6-have.tif\t\t\t        0001-6-4-1-mag.tif\n",
-            " 0001-1-6-7-a.tif\t\t\t        0001-6-4-2-die.tif\n",
-            " 0001-1-7-0-pretty.tif\t\t\t        0001-6-4-3-Todtenglocke.tif\n",
-            " 0001-1-7-1-correct.tif\t\t\t        0001-6-4-4-schallen.tif\n",
-            " 0001-1-7-2-notion.tif\t\t\t        0001-6-5-0-Dann.tif\n",
-            " 0001-1-7-3-of.tif\t\t\t        0001-6-5-1-bist.tif\n",
-            " 0001-1-7-4-my.tif\t\t\t        0001-6-5-2-du.tif\n",
-            " 0001-1-7-5-country.tif\t\t\t        0001-6-5-3-deines.tif\n",
-            " 0001-1-7-6-and.tif\t\t\t        0001-6-5-4-Dienstes.tif\n",
-            " 0001-1-7-7-countrymen.tif\t\t        0001-6-5-5-frey.tif\n",
-            " 0001-1-8-0-Alas.tif\t\t\t        0001-6-6-0-Die.tif\n",
-            " 0001-1-8-1-a.tif\t\t\t        0001-6-6-1-Uhr.tif\n",
-            " 0001-1-8-2-few.tif\t\t\t        0001-6-6-2-mag.tif\n",
-            " 0001-1-8-3-years.tif\t\t\t        0001-6-6-3-stehn.tif\n",
-            " 0001-1-8-4-ago.tif\t\t\t        0001-6-6-4-der.tif\n",
-            " 0001-1-8-5-I.tif\t\t\t        0001-6-6-5-Zeiger.tif\n",
-            " 0001-1-8-6-should.tif\t\t\t        0001-6-6-6-fallen.tif\n",
-            " 0001-1-8-7-have.tif\t\t\t        0001-6-7-0-Es.tif\n",
-            " 0001-1-8-8-said.tif\t\t\t        0001-6-7-1-sey.tif\n",
-            " 0001-1-9-0-my.tif\t\t\t        0001-6-7-2-die.tif\n",
-            " 0001-1-9-1-universe.tif\t\t        0001-6-7-3-Zeit.tif\n",
-            " 0001-1-9-3-but.tif\t\t\t        0001-6-7-4-für.tif\n",
-            " 0001-1-9-4-now.tif\t\t\t        0001-6-7-5-mich.tif\n",
-            " 0001-1-9-5-my.tif\t\t\t        0001-6-7-6-vorbey.tif\n",
-            " 0001-1-9-6-mind.tif\t\t\t        0001-7-0-0-You.tif\n",
-            " 0001-1-9-8-has.tif\t\t\t        0001-7-0-1-have.tif\n",
-            " 0001-1-9-9-been.tif\t\t\t        0001-7-0-2-killed.tif\n",
-            " 0001-2-0-0-And.tif\t\t\t        0001-7-0-3-my.tif\n",
-            " 0001-2-0-1-fortune.tif\t\t\t        0001-7-0-4-love.tif\n",
-            " 0001-2-0-2-on.tif\t\t\t        0001-7-0-5-You.tif\n",
-            " 0001-2-0-3-his.tif\t\t\t        0001-7-0-6-used.tif\n",
-            " 0001-2-0-4-damned.tif\t\t\t        0001-7-0-7-to.tif\n",
-            " 0001-2-0-5-quarrel.tif\t\t\t        0001-7-0-8-stir.tif\n",
-            " 0001-2-0-6-smiling.tif\t\t\t        0001-7-1-0-my.tif\n",
-            "\"0001-2-1-0-Show'd.tif\"\t\t\t        0001-7-1-1-imagination.tif\n",
-            " 0001-2-1-1-like.tif\t\t\t        0001-7-1-2-Now.tif\n",
-            " 0001-2-1-2-a.tif\t\t\t        0001-7-1-3-you.tif\n",
-            "\"0001-2-1-3-rebel's.tif\"\t\t       \"0001-7-1-4-don't.tif\"\n",
-            " 0001-2-1-4-whore.tif\t\t\t        0001-7-1-5-even.tif\n",
-            " 0001-2-1-5-but.tif\t\t\t        0001-7-1-6-stir.tif\n",
-            "\"0001-2-1-6-all's.tif\"\t\t\t        0001-7-1-7-my.tif\n",
-            " 0001-2-1-7-too.tif\t\t\t        0001-7-2-0-curiosity.tif\n",
-            " 0001-2-1-8-weak.tif\t\t\t        0001-7-2-1-You.tif\n",
-            " 0001-2-2-0-For.tif\t\t\t        0001-7-2-2-simply.tif\n",
-            " 0001-2-2-1-brave.tif\t\t\t        0001-7-2-3-produce.tif\n",
-            " 0001-2-2-2-Nomacs.tif\t\t\t        0001-7-2-4-no.tif\n",
-            " 0001-2-2-4-well.tif\t\t\t        0001-7-2-5-effect.tif\n",
-            " 0001-2-2-5-he.tif\t\t\t        0001-7-3-0-I.tif\n",
-            " 0001-2-2-6-deserves.tif\t\t        0001-7-3-1-loved.tif\n",
-            " 0001-2-2-7-that.tif\t\t\t        0001-7-3-2-you.tif\n",
-            " 0001-2-2-8-name.tif\t\t\t        0001-7-3-3-because.tif\n",
-            " 0001-2-3-0-Disdaining.tif\t\t        0001-7-3-4-you.tif\n",
-            " 0001-2-3-1-fortune.tif\t\t\t        0001-7-3-5-were.tif\n",
-            " 0001-2-3-3-with.tif\t\t\t        0001-7-3-6-marvellous.tif\n",
-            " 0001-2-3-4-his.tif\t\t\t        0001-7-4-0-because.tif\n",
-            "\"0001-2-3-5-brandish'd.tif\"\t\t        0001-7-4-1-you.tif\n",
-            " 0001-2-3-6-steel.tif\t\t\t        0001-7-4-2-had.tif\n",
-            " 0001-2-4-0-Which.tif\t\t\t        0001-7-4-3-genius.tif\n",
-            " 0001-2-4-1-smoked.tif\t\t\t        0001-7-4-4-and.tif\n",
-            " 0001-2-4-2-with.tif\t\t\t        0001-7-4-5-intellect.tif\n",
-            " 0001-2-4-3-bloody.tif\t\t\t        0001-7-5-0-because.tif\n",
-            " 0001-2-4-4-execution.tif\t\t        0001-7-5-1-you.tif\n",
-            " 0001-2-5-0-Like.tif\t\t\t        0001-7-5-2-realised.tif\n",
-            "\"0001-2-5-1-valour's.tif\"\t\t        0001-7-5-3-the.tif\n",
-            " 0001-2-5-2-minion.tif\t\t\t        0001-7-5-4-dreams.tif\n",
-            " 0001-2-5-3-carved.tif\t\t\t        0001-7-5-5-of.tif\n",
-            " 0001-2-5-4-out.tif\t\t\t        0001-7-5-6-great.tif\n",
-            " 0001-2-5-5-his.tif\t\t\t        0001-7-6-0-poets.tif\n",
-            " 0001-2-5-6-passage.tif\t\t\t        0001-7-6-1-and.tif\n",
-            " 0001-2-6-0-Till.tif\t\t\t        0001-7-6-2-gave.tif\n",
-            " 0001-2-6-1-he.tif\t\t\t        0001-7-6-3-shape.tif\n",
-            " 0001-2-6-2-faced.tif\t\t\t        0001-7-6-4-and.tif\n",
-            " 0001-2-6-3-the.tif\t\t\t        0001-7-6-5-substance.tif\n",
-            " 0001-2-6-4-slave.tif\t\t\t        0001-7-6-6-to.tif\n",
-            " 0001-3-0-0-Mailüfterl.tif\t\t        0001-7-7-0-the.tif\n",
-            " 0001-3-0-1-is.tif\t\t\t        0001-7-7-1-shadows.tif\n",
-            " 0001-3-0-2-an.tif\t\t\t        0001-7-7-2-of.tif\n",
-            " 0001-3-0-3-Austrian.tif\t\t        0001-7-7-3-art.tif\n",
-            " 0001-3-0-4-nickname.tif\t\t        0001-7-7-4-You.tif\n",
-            " 0001-3-0-5-for.tif\t\t\t        0001-7-7-5-have.tif\n",
-            " 0001-3-0-6-the.tif\t\t\t        0001-7-7-6-thrown.tif\n",
-            " 0001-3-10-1-Volltransistor-Rechenautomat.tif   0001-7-7-7-it.tif\n",
-            " 0001-3-1-0-first.tif\t\t\t        0001-7-8-0-all.tif\n",
-            " 0001-3-1-1-computer.tif\t\t        0001-7-8-1-away.tif\n",
-            " 0001-3-1-2-working.tif\t\t\t        0001-7-8-2-You.tif\n",
-            " 0001-3-1-3-solely.tif\t\t\t        0001-7-8-3-are.tif\n",
-            " 0001-3-1-4-on.tif\t\t\t        0001-7-8-4-shallow.tif\n",
-            " 0001-3-1-5-transistors.tif\t\t        0001-7-8-5-and.tif\n",
-            " 0001-3-2-0-on.tif\t\t\t        0001-7-8-6-stupid.tif\n",
-            " 0001-3-2-1-the.tif\t\t\t        0001-8-0-0-While.tif\n",
-            " 0001-3-2-2-European.tif\t\t        0001-8-0-1-I.tif\n",
-            " 0001-3-2-3-mainland.tif\t\t        0001-8-0-2-gazed.tif\n",
-            " 0001-3-2-4-It.tif\t\t\t        0001-8-0-4-this.tif\n",
-            " 0001-3-2-5-was.tif\t\t\t        0001-8-0-5-fissure.tif\n",
-            " 0001-3-2-6-built.tif\t\t\t        0001-8-0-6-rapidly.tif\n",
-            " 0001-3-2-7-in.tif\t\t\t        0001-8-10-0-of.tif\n",
-            " 0001-3-3-0-1955.tif\t\t\t        0001-8-10-1-Usher.tif\n",
-            " 0001-3-3-1-at.tif\t\t\t        0001-8-1-0-widened.tif\n",
-            " 0001-3-3-2-the.tif\t\t\t        0001-8-1-2-there.tif\n",
-            " 0001-3-3-3-Vienna.tif\t\t\t        0001-8-1-3-came.tif\n",
-            " 0001-3-3-4-University.tif\t\t        0001-8-1-4-a.tif\n",
-            " 0001-3-3-5-of.tif\t\t\t        0001-8-1-5-fierce.tif\n",
-            " 0001-3-3-6-Technology.tif\t\t        0001-8-1-6-breath.tif\n",
-            " 0001-3-3-7-by.tif\t\t\t        0001-8-1-7-of.tif\n",
-            " 0001-3-4-0-Heinz.tif\t\t\t        0001-8-2-0-the.tif\n",
-            " 0001-3-4-1-Zemanek.tif\t\t\t        0001-8-2-1-whirlwind.tif\n",
-            " 0001-3-4-2-The.tif\t\t\t        0001-8-2-3-the.tif\n",
-            " 0001-3-4-3-builder.tif\t\t\t        0001-8-2-4-entire.tif\n",
-            " 0001-3-4-4-plays.tif\t\t\t        0001-8-2-5-orb.tif\n",
-            " 0001-3-4-5-on.tif\t\t\t        0001-8-2-6-of.tif\n",
-            " 0001-3-4-6-a.tif\t\t\t        0001-8-2-7-the.tif\n",
-            " 0001-3-4-7-quote.tif\t\t\t        0001-8-3-0-satellite.tif\n",
-            " 0001-3-5-0-on.tif\t\t\t        0001-8-3-1-burst.tif\n",
-            " 0001-3-5-1-an.tif\t\t\t        0001-8-3-2-at.tif\n",
-            " 0001-3-5-2-operating.tif\t\t        0001-8-3-3-once.tif\n",
-            " 0001-3-5-3-computer.tif\t\t        0001-8-3-4-upon.tif\n",
-            " 0001-3-5-4-If.tif\t\t\t        0001-8-3-5-my.tif\n",
-            " 0001-3-5-5-it.tif\t\t\t        0001-8-3-6-sight.tif\n",
-            " 0001-3-5-6-is.tif\t\t\t        0001-8-4-0-my.tif\n",
-            " 0001-3-5-7-not.tif\t\t\t        0001-8-4-1-brain.tif\n",
-            " 0001-3-6-0-the.tif\t\t\t        0001-8-4-2-reeled.tif\n",
-            " 0001-3-6-1-rapid.tif\t\t\t        0001-8-4-3-as.tif\n",
-            " 0001-3-6-2-calculation.tif\t\t        0001-8-4-4-I.tif\n",
-            " 0001-3-6-3-speed.tif\t\t\t        0001-8-4-5-saw.tif\n",
-            " 0001-3-6-4-of.tif\t\t\t        0001-8-4-6-the.tif\n",
-            " 0001-3-6-5-American.tif\t\t        0001-8-4-7-mighty.tif\n",
-            " 0001-3-6-6-models.tif\t\t\t        0001-8-5-0-walls.tif\n",
-            " 0001-3-7-0-that.tif\t\t\t        0001-8-5-1-rushing.tif\n",
-            " 0001-3-7-1-Whirlwind.tif\t\t        0001-8-5-2-asunder.tif\n",
-            " 0001-3-7-2-or.tif\t\t\t        0001-8-5-4-there.tif\n",
-            " 0001-3-7-3-Typhoon.tif\t\t\t        0001-8-5-5-was.tif\n",
-            " 0001-3-7-4-can.tif\t\t\t        0001-8-5-6-a.tif\n",
-            " 0001-3-7-5-achieve.tif\t\t\t        0001-8-5-7-long.tif\n",
-            " 0001-3-7-6-it.tif\t\t\t        0001-8-6-0-tumultuous.tif\n",
-            " 0001-3-8-0-will.tif\t\t\t        0001-8-6-1-shouting.tif\n",
-            " 0001-3-8-1-be.tif\t\t\t        0001-8-6-2-sound.tif\n",
-            " 0001-3-8-2-enough.tif\t\t\t        0001-8-6-3-like.tif\n",
-            " 0001-3-8-3-for.tif\t\t\t        0001-8-6-4-the.tif\n",
-            " 0001-3-8-4-a.tif\t\t\t        0001-8-6-5-voice.tif\n",
-            " 0001-3-8-5-Wiener.tif\t\t\t        0001-8-7-0-of.tif\n",
-            " 0001-3-8-6-Mailüfterl.tif\t\t        0001-8-7-1-a.tif\n",
-            " 0001-3-9-0-The.tif\t\t\t        0001-8-7-2-thousand.tif\n",
-            " 0001-3-9-1-full.tif\t\t\t        0001-8-7-3-waters.tif\n",
-            " 0001-3-9-2-name.tif\t\t\t        0001-8-7-5-and.tif\n",
-            " 0001-3-9-3-is.tif\t\t\t        0001-8-7-6-the.tif\n",
-            " 0001-3-9-4-Binär.tif\t\t\t        0001-8-7-7-deep.tif\n",
-            " 0001-3-9-6-dezimaler.tif\t\t        0001-8-8-0-and.tif\n",
-            " 0001-4-0-0-When.tif\t\t\t        0001-8-8-1-dank.tif\n",
-            " 0001-4-0-1-we.tif\t\t\t        0001-8-8-2-tarn.tif\n",
-            " 0001-4-0-2-look.tif\t\t\t        0001-8-8-3-at.tif\n",
-            " 0001-4-0-3-to.tif\t\t\t        0001-8-8-4-my.tif\n",
-            " 0001-4-0-4-the.tif\t\t\t        0001-8-8-5-feet.tif\n",
-            " 0001-4-0-5-individuals.tif\t\t        0001-8-8-6-closed.tif\n",
-            " 0001-4-0-6-of.tif\t\t\t        0001-8-8-7-sullenly.tif\n",
-            " 0001-4-0-7-the.tif\t\t\t        0001-8-9-0-and.tif\n",
-            " 0001-4-1-0-same.tif\t\t\t        0001-8-9-1-silently.tif\n",
-            " 0001-4-1-1-variety.tif\t\t\t        0001-8-9-2-over.tif\n",
-            " 0001-4-1-2-or.tif\t\t\t        0001-8-9-3-the.tif\n",
-            " 0001-4-1-3-sub-variety.tif\t\t        0001-8-9-4-fragments.tif\n",
-            " 0001-4-1-4-of.tif\t\t\t        0001-8-9-5-of.tif\n",
-            " 0001-4-1-5-our.tif\t\t\t        0001-8-9-6-the.tif\n",
-            " 0001-4-1-6-older.tif\t\t\t        0001-8-9-7-House.tif\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
